--- a/store/templates/customer_list.html
+++ b/store/templates/customer_list.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-    <title>Lista de Clientes</title>
+    <title>Customer list</title>
 </head>
 <body>
-    <h1>Lista de Clientes</h1>
+    <h1>Customer list</h1>
     <ul>
         {% for customer in customers %}
             <li>{{ customer.email }}</li>
